...
}


- (void)viewWillAppear:(BOOL)animated {
  [super viewWillAppear:animated];

  // We may came here from the "Add" screen
  // reload apps in this case
  [self onDataUpdate];

  [self.tableView reloadData];
  [self.navigationController setNavigationBarHidden:NO];
}
...
                   UIPasteboardOptionLocalOnly : @NO,
                   UIPasteboardOptionExpirationDate : expiration
                 }];

    __block UIAlertController* alert =
        [UIAlertController alertControllerWithTitle:@""
                                            message:@"Password copied to clipboard"
                                     preferredStyle:UIAlertControllerStyleAlert];
    [self presentViewController:alert
                       animated:YES
                     completion:^{
                       [cell.activityIndicator stopAnimating];
                       cell.accessoryView = accessory;
...
