...
#import "ApplicationsTableViewController.h"
#import "Helpers.h"

#import <QuartzCore/QuartzCore.h>
#import <dispatch/dispatch.h>  // dispatch_queue_t

static NSString* const kMasterPlaceholder = @"Master Password";
static NSString* const kConfirmPlaceholder = @"Confirm Password";

@interface PasswordViewController ()

@property(weak, nonatomic) IBOutlet UITextField* masterPassword;
@property(weak, nonatomic) IBOutlet UILabel* emojiLabel;
@property(weak, nonatomic) IBOutlet UILabel* emojiConfirmationLabel;
...
