...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="cCH-5t-r8D" id="AyV-nO-mcc"/>
                            <outlet property="delegate" destination="cCH-5t-r8D" id="x1J-sI-cNP"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Applications" id="Kmp-Vx-Sf1"/>
                    <connections>
                        <outlet property="addButtonItem" destination="fdn-9f-QBf" id="pgD-On-l6B"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="DW8-JK-ySI" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <barButtonItem systemItem="add" id="fdn-9f-QBf">
...
